--- a/nav.css
+++ b/nav.css
@@ -1,4 +1,11 @@
-
+html{
+	font-size:10px;
+}
+body{
+		font-family: "PT Sans", sans-serif;
+		font-weight:400;
+		font-size:16px;
+}
 .nav__wrapper {
 	display: block;
 	box-shadow: rgba(0, 0, 0, 0.1) 0 1px 1px 0
