--- a/nav.css
+++ b/nav.css
@@ -395,14 +395,78 @@ amp-img.nav__logo img {
 /* THE ABOVE IS INTENDED TO RETAIN ORIGINAL/INITIAL FUNCTIONALITY */  
 /* THE FOLLOWING ADDS DROP-DOWN STYLING */
 
+/* increases the width of underline for items that contain submenus*/
+.nav-menu__link:after{
+	width:100px;
+}
+/* general styling for lists within the nav */
+.nav-menu ul {
+	list-style:none;
+	padding:0;
+}
+/* layout of primary menu list */
+.nav-menu-list{
+	display: flex;
+	margin:0;
+	height:100%;
+}
+
+/* top-level items positioned so submenus can be positioned relative to them */
+.nav-menu-list > li {
+	position:relative;
+}
+
+/* Targets 1st & 2nd level nav items */
+ a.nav-menu__link{
+	width:100%;
+	height:100%;
+	display:flex;
+	align-items:center;
+	padding: 0 5px;
+}
+
+a.nav-menu__link:hover{
+	color:white;
+}
+a.nav-menu__link.nav--credit:hover, 
+a.nav-menu__link.nav--credit + ul.nav-submenu-list li:hover {
+	background: #674F83;
+}
+a.nav-menu__link.nav--banking:hover,
+a.nav-menu__link.nav--banking + ul.nav-submenu-list li:hover {
+	background: #2e842e;
+}
+a.nav-menu__link.nav--brokerages:hover, 
+a.nav-menu__link.nav--brokerages + ul.nav-submenu-list li:hover  {
+	background: #104471;
+}
+a.nav-menu__link.nav--loans:hover, 
+a.nav-menu__link.nav--loans + ul.nav-submenu-list li:hover  {
+	background: #936;
+}
+a.nav-menu__link.nav--blog:hover, 
+a.nav-menu__link.nav--blog + ul.nav-submenu-list li:hover  {
+	background: #369;
+}
+
 /* Initially hide sub-menus by default */
-.nav-submenu{
+ul.nav-submenu-list{
 	display:none;
-	border: 1px solid black;
+	border: 1px solid rgba(151,151,151,0.47);
+	top: 100%;
+	left:0;
+	right:0;
 	position:absolute;
+	width:auto;
+	width: 150px;
+	font-size:.9em;
+}
+
+.nav-submenu-list > li a.nav-menu__link {
+	padding: 5px;
 }
 
 /* Display submenu when top-level menu item is hovered over */
-.nav-menu__item:hover .nav-submenu {
+.nav-menu__item:hover .nav-submenu-list {
 	display:block;
 }
