--- a/nav.css
+++ b/nav.css
@@ -444,7 +444,7 @@ amp-img.nav__logo img {
 
 	button.nav-arrow{
 		border:none;
-		height:100%;
+		/* height:100%; */
 		display:flex;
 		align-items: flex-end;
 		background:transparent;
@@ -579,8 +579,8 @@ amp-img.nav__logo img {
 @media screen and (max-width:1024px){
 	.nav-submenu-list{display:none;}
 	button.nav-arrow{display:none;}
-
-	.nav-menu__link:hover:after{
+	.nav
+	.nav-menu__item:hover a:after{
 		display:block;
 		bottom:0px;
 		opacity:1;
